# formant_ar3_control

./: CMakeLists.txt  README.md  package.xml
ar3/: ar3.urdf
ar3/meshes/: base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
launch/: brian.launch  demo.launch  demo_sim.launch  formant_move_demo.launch
src/: formant_move_demo.cpp
